[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inafish"
version = "1.0.0"
description = "A simple library for inafishent (but smol) compression. >[_]"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true
author = "The Odd Cell"
author_email = "me@oddcell.ca"
url = "https://github.com/theoddcell/inafish"
